--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+.container {
+  max-width: 960px;
+}
+
+hr {
+  background-color: rgba(0,0,0,.1);
+  height: 1px;
+}
+
 .lectureContainer {
   padding: 1.25rem;
   border: 1px solid rgba(0,0,0,.125);
@@ -8,4 +17,8 @@
 .lectureVideo {
   width: 100%;
   height: 200px;
+}
+
+.section {
+  padding: 1rem;
 }
